# crosspost-helper

./: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASE.md  cph_commitmsg.txt  cph_msg.txt  cph_upload_commit.txt  do_commit.sh  do_git.py  do_upload_commit.sh  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
chrome-extension/: manifest.firefox.json  manifest.json
chrome-extension/background/: worker.js
chrome-extension/content/: bridge.js
chrome-extension/popup/: index.html  popup.js
dist-electron/: Crosspost Helper Setup 0.1.1.exe.blockmap  Crosspost Helper Setup 0.1.2.exe.blockmap  Crosspost Helper Setup 0.1.3.exe.blockmap  Crosspost Helper-0.1.1-arm64-mac.zip.blockmap  Crosspost Helper-0.1.1-arm64.dmg.blockmap  Crosspost Helper-0.1.2-arm64-mac.zip.blockmap  Crosspost Helper-0.1.2-arm64.dmg.blockmap  Crosspost Helper-0.1.3-arm64-mac.zip.blockmap  Crosspost Helper-0.1.3-arm64.dmg.blockmap  builder-debug.yml  builder-effective-config.yaml  crossposthelper_0.1.1_arm64.deb  crossposthelper_0.1.2_arm64.deb  crossposthelper_0.1.3_arm64.deb
dist-electron/.icon-icns/: icon.icns
electron/: main.cjs  preload.cjs  scanWorker.cjs
scripts/: collect-local-release.cjs  env.cjs  notify-discord.cjs  package-local-release.cjs  publish-itch-local.cjs  release.cjs
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/types/: scan.ts  (+8 more)
(+220 files in other folders)
