[package]
name = "crossposthelper"
version = "0.1.0"
description = "Local-first AI image posting picker"
authors = ["Crosspost Helper"]
edition = "2021"

[lib]
name = "crossposthelper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
walkdir = "2"
